--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-colortemp-http",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "http(s) plugin for Homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
@@ -13,16 +13,20 @@
   "author": {
     "name": "Mathias Montini"
   },
-  "contributors":[
-  { "name" : "NovaGL"},
-  { "name" : "David Parry"}
-  ], 
+  "contributors": [
+    {
+      "name": "NovaGL"
+    },
+    {
+      "name": "David Parry"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/MeMathias/homebridge-plugin.git"
   },
   "dependencies": {
     "request": "^2.65.0",
-	"polling-to-event": ">=2.0.2"
+    "polling-to-event": ">=2.0.2"
   }
 }
